# quantmetrics-suite

./: .env.example  .gitignore  CONTRIBUTING.md  EVENT_SCHEMA.md  GUARD_ATTRIBUTION_FIX_REPORT_MENTOR.md  LICENSE  MENTOR_5YEAR_PROMOTION_GATE_UPDATE.md  MENTOR_UPDATE.md  PUBLIC_CASE_STUDY_THROUGHPUT_DISCOVERY.md  QUANTBUILD_OVERVIEW.md  QUANT_STACK_INTEGRATION_ACCEPTANCE.md  README.md  pyproject.toml  quant_os-workspace.code-workspace  requirements.txt  run_demo.py  wendy . herstelposten
configs/: backtest_2025_edge_unlock.yaml  backtest_2025_expansion_d1_risk_uplift.yaml  challenge.yaml  (+28 more)
quantanalytics/: README.md  pyproject.toml
quantanalytics/docs/: ANALYTICS_SPRINT_PLAN.md  GUARD_ATTRIBUTION_ENGINE.md  LIVE_VPS_AND_LOCAL_BACKTEST.md
quantanalytics/quantanalytics/: __init__.py
quantanalytics/quantanalytics/guard_attribution/: __init__.py  attribution.py  cli.py  decision_cycles.py  loader.py  models.py  report.py  scoring.py  stability.py  throughput.py  verdict.py
quantanalytics/quantmetrics_analytics/: __init__.py
quantanalytics/quantmetrics_analytics/analysis/: event_summary.py  extended_diagnostics.py  inference_engine.py  inference_report.py  performance_summary.py  priority_insights.py  r_series_input.py  signal_funnel.py
quantanalytics/quantmetrics_analytics/cli/: guard_attribution_compare.py  run_analysis.py
quantanalytics/quantmetrics_analytics/datasets/: closed_trades.py  guard_decisions.py
quantanalytics/quantmetrics_analytics/guard_attribution/: block_extractor.py  context_aggregator.py  counterfactual.py  normalize.py  pipeline.py  rerun_compare.py
quantanalytics/quantmetrics_analytics/processing/: normalize.py
quantanalytics/src/: __init__.py
quantanalytics/src/quantanalytics/: __init__.py
quantanalytics/src/quantanalytics/guard_attribution/: __init__.py  attribution.py  cli.py  decision_cycles.py  loader.py  models.py  report.py  scoring.py  stability.py  throughput.py  verdict.py
quantanalytics/tests/: test_guard_attribution.py  test_inference_engine.py  test_pipeline.py
quantanalytics/tests/fixtures/: guard_attribution_mini.jsonl  guard_rerun_compare.jsonl  sample_events.jsonl
quantanalytics/tests/guard_attribution/: conftest.py  test_counterfactual_unavailable.py  test_decision_cycle_reconstruction.py  test_decision_quality_scoring.py  test_edge_report_generation.py  test_edge_stability_low_sample.py  test_edge_verdict_low_sample.py  test_guard_attribution_counts.py  test_loader_jsonl.py  test_missing_decision_cycle_id_warning.py  test_throughput_diagnostics.py
quantbuildv1/quantbuild_v2/: README.md  pyproject.toml
quantbuildv1/quantbuild_v2/configs/accounts/: example.yaml
quantbuildv1/quantbuild_v2/src/quantbuild_v2/: __init__.py
quantbuildv1/quantbuild_v2/src/quantbuild_v2/strategies/: __init__.py
quantlogv1/: README.md  pyproject.toml
quantlogv1/data/events/sample/: quantbuild.jsonl
quantlogv1/docs/: MENTOR_UPDATE.md  PLATFORM_ROADMAP.md  QUANTBUILD_LOGGING_UPGRADE_DATA_COLLECTION.md  QUANTLOG_GUARDRAILS.md  QUANTLOG_OPS_SPRINT_B.md  QUANTLOG_UITLEG.md  QUANTLOG_V1_ARCHITECTURE.md  QUANT_STACK_INTEGRATION_ACCEPTANCE.md  SCHEMA_CHANGE_CHECKLIST.md  VPS Deploy Handboek — QuantLog Ops Console v0.1.md  WEEKLY_ANALYSIS_WORKFLOW.md
quantlogv1/quantlog_ops/: app.py  config.py  page_fragments.py
quantlogv1/quantlog_ops/pages/: 1_Daily_Control.py  3_Event_Explorer.py
quantlogv1/quantlog_ops/services/: __init__.py  day_scan.py  exporter.py  file_indexer.py  no_trade_explainer.py  summarizer.py
quantlogv1/quantlog_ops/utils/: __init__.py  parser.py  quick_filters.py  session_state.py
quantlogv1/scripts/: ci_smoke.ps1  contract_check.py  generate_sample_day.py  nightly_quantlog_report.sh
quantlogv1/src/quantlog/: cli.py
quantlogv1/src/quantlog/events/: __init__.py  io.py  schema.py
quantlogv1/src/quantlog/ingest/: emitter.py
quantlogv1/src/quantlog/quality/: __init__.py  service.py
quantlogv1/src/quantlog/replay/: service.py
quantlogv1/src/quantlog/summarize/: service.py
quantlogv1/tests/: test_emitter.py  test_ops_parser.py  test_ops_session_state_logic.py  test_quality.py  test_replay.py
quantlogv1/tests/fixtures/contracts/: quantbridge_dry_run.jsonl
(+793 files in other folders)
