[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantresearch"
version = "0.1.0"
description = "Hypothesis-driven research layer on top of QuantAnalytics / QuantBuild outputs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quantresearch*"]
