[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantmetrics-analytics"
version = "0.1.0"
description = "QuantMetrics analytics: QuantLog JSONL → insights (read-only)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
quantmetrics-analytics = "quantmetrics_analytics.cli.run_analysis:main"
quantmetrics-guard-attribution = "quantmetrics_analytics.cli.guard_attribution:main"
quantmetrics-guard-attribution-compare = "quantmetrics_analytics.cli.guard_attribution_compare:main"
quantanalytics-guard-attribution-v1 = "quantanalytics.guard_attribution.cli:main"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["quantmetrics_analytics*", "quantanalytics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
