[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantbuild-v2"
version = "0.1.0"
description = "QuantBuild multi-strategy host (greenfield package)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[tool.setuptools.packages.find]
where = ["src"]
